--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         python-version: [3.9]
         os: [macos-latest, ubuntu-latest, windows-latest]
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: env
+        run: set
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
