--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,12 @@
 envlist = tests-{py38,py39}
 
 [testenv]
+passenv = CI
 commands = python -m pytest {posargs}
 deps = -rrequirements.txt
 
 [testenv:dev]
+passenv = CI
 usedevelop = True
 commands =
 
